--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,12 +14,13 @@
   },
   "scripts": {
     "ng": "ng",
-    "start:webapp": "ng serve --port 17080 --project=webapp",
-    "start:admin": "ng serve --port 17090 --project=admin",
+    "start:webapp": "ng serve --port 17080 --project=webapp --proxy-config ./backend.proxy.json",
+    "start:admin": "ng serve --port 17090 --project=admin --proxy-config ./backend.proxy.json",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "openapi": "./node_modules/.bin/ng-openapi-gen --config ./openapi-backend.json"
   },
   "dependencies": {
     "@angular/animations": "~10.0.3",
@@ -41,9 +42,9 @@
     "@angular-devkit/build-ng-packagr": "~0.1000.3",
     "@angular/cli": "~10.0.2",
     "@angular/compiler-cli": "~10.0.3",
-    "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.0",
@@ -52,6 +53,7 @@
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~3.3.0",
     "karma-jasmine-html-reporter": "^1.5.0",
+    "ng-openapi-gen": "^0.12.1",
     "ng-packagr": "^10.0.0",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
