--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,8 +14,9 @@
   },
   "scripts": {
     "ng": "ng",
-    "start:webapp": "ng serve --port 17080 --project=webapp --proxy-config ./backend.proxy.json",
-    "start:admin": "ng serve --port 17090 --project=admin --proxy-config ./backend.proxy.json",
+    "start:server": "./node_modules/.bin/ws -c ./webserver.config.js",
+    "start:webapp": "ng serve --port 17070 --project=webapp --proxy-config ./backend.proxy.json --baseHref=/app/ --servePath=/ --liveReload=false",
+    "start:admin": "ng serve --port 17090 --project=admin --proxy-config ./backend.proxy.json --baseHref=/admin/ --servePath=/ --liveReload=false",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -33,6 +34,7 @@
     "@angular/platform-browser": "~10.0.3",
     "@angular/platform-browser-dynamic": "~10.0.3",
     "@angular/router": "~10.0.3",
+    "@ngxs/storage-plugin": "^3.6.2",
     "@ngxs/store": "^3.6.2",
     "lodash": "^4.17.19",
     "moment": "^2.27.0",
@@ -58,6 +60,7 @@
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~3.3.0",
     "karma-jasmine-html-reporter": "^1.5.0",
+    "local-web-server": "^4.2.1",
     "ng-openapi-gen": "^0.12.1",
     "ng-packagr": "^10.0.0",
     "protractor": "~7.0.0",
