--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,8 @@
   },
   "scripts": {
     "ng": "ng",
-    "start:server": "./node_modules/.bin/ws -c ./webserver.config.js",
+    "start": "run-p start:webapp start:admin start:server",
+    "start:server": "wait-on http://localhost:17070/ && wait-on http://localhost:17090/ && ./node_modules/.bin/ws -c ./webserver.config.js",
     "start:webapp": "ng serve --port 17070 --project=webapp --proxy-config ./backend.proxy.json --baseHref=/app/ --servePath=/ --liveReload=false",
     "start:admin": "ng serve --port 17090 --project=admin --proxy-config ./backend.proxy.json --baseHref=/admin/ --servePath=/ --liveReload=false",
     "build": "ng build",
@@ -63,9 +64,11 @@
     "local-web-server": "^4.2.1",
     "ng-openapi-gen": "^0.12.1",
     "ng-packagr": "^10.0.0",
+    "npm-run-all": "^4.1.5",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~3.9.5"
+    "typescript": "~3.9.5",
+    "wait-on": "^5.1.0"
   }
 }
