--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,7 +22,8 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "openapi": "./node_modules/.bin/ng-openapi-gen --config ./openapi-backend.json"
+    "openapi": "./node_modules/.bin/ng-openapi-gen --config ./openapi-backend.json",
+    "copy:fonts": "ts-node ./copy-fonts.ts"
   },
   "dependencies": {
     "@angular/animations": "~10.0.3",
@@ -35,12 +36,16 @@
     "@angular/platform-browser": "~10.0.3",
     "@angular/platform-browser-dynamic": "~10.0.3",
     "@angular/router": "~10.0.3",
+    "@ngneat/until-destroy": "^7.3.2",
+    "@ngx-translate/core": "^13.0.0",
+    "@ngx-translate/http-loader": "^6.0.0",
     "@ngxs/storage-plugin": "^3.6.2",
     "@ngxs/store": "^3.6.2",
     "lodash": "^4.17.19",
     "moment": "^2.27.0",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
+    "typeface-roboto": "0.0.75",
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
