Frontend: add jdenticon to allow js

--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -45,7 +45,8 @@
             ],
             "scripts": [],
             "allowedCommonJsDependencies": [
-              "lodash"
+              "lodash",
+              "jdenticon"
             ],
             "extractCss": true,
             "stylePreprocessorOptions": {
