--- a/backend/package.json
+++ b/backend/package.json
@@ -51,8 +51,10 @@
     "@nestjs/common": "^7.0.9",
     "@nestjs/core": "^7.0.9",
     "@nestjs/platform-express": "^7.0.9",
+    "@nestjs/platform-ws": "^7.4.2",
     "@nestjs/schedule": "^0.4.0",
     "@nestjs/swagger": "^4.5.3",
+    "@nestjs/websockets": "^7.4.2",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.12.2",
     "cron": "^1.8.2",
@@ -66,7 +68,8 @@
     "rxjs": "^6.5.4",
     "sqlite3": "^5.0.0",
     "swagger-ui-express": "^4.1.4",
-    "unique-names-generator": "^4.2.0"
+    "unique-names-generator": "^4.2.0",
+    "ws": "^7.3.1"
   },
   "devDependencies": {
     "@compodoc/compodoc": "^1.1.11",
@@ -83,6 +86,7 @@
     "@types/randomstring": "^1.1.6",
     "@types/sqlite3": "^3.1.6",
     "@types/supertest": "^2.0.8",
+    "@types/ws": "^7.2.6",
     "@typescript-eslint/eslint-plugin": "^3.5.0",
     "@typescript-eslint/parser": "^3.5.0",
     "env-cmd": "^10.1.0",
