--- a/backend/package.json
+++ b/backend/package.json
@@ -69,6 +69,7 @@
     "sqlite3": "^5.0.0",
     "swagger-ui-express": "^4.1.4",
     "unique-names-generator": "^4.2.0",
+    "uuid": "^8.3.0",
     "ws": "^7.3.1"
   },
   "devDependencies": {
@@ -86,6 +87,7 @@
     "@types/randomstring": "^1.1.6",
     "@types/sqlite3": "^3.1.6",
     "@types/supertest": "^2.0.8",
+    "@types/uuid": "^8.0.0",
     "@types/ws": "^7.2.6",
     "@typescript-eslint/eslint-plugin": "^3.8.0",
     "@typescript-eslint/parser": "^3.8.0",
